# CL-Rust-solutions

./: README.md
CH10_commr/: Cargo.toml
CH10_commr/src/: lib.rs
CH11_tailr/: Cargo.toml
CH11_tailr/src/: lib.rs
CH11_tailr/tests/: cli.rs
CH12_fortuner/: Cargo.toml
CH12_fortuner/src/: lib.rs
CH12_fortuner/tests/: cli.rs
CH13_calr/: Cargo.toml
CH13_calr/src/: lib.rs
CH13_calr/tests/: cli.rs
CH13_calr_extended/: Cargo.toml
CH13_calr_extended/src/: lib.rs
CH14_lsr/: Cargo.toml
CH14_lsr/src/: lib.rs
CH1_hello/: Cargo.toml
CH2_echor/: Cargo.toml  err
CH2_echor/src/: main.rs
CH2_echor/tests/: cli.rs
CH3_catr/: Cargo.toml
CH3_catr/src/: lib.rs
CH4_headr/: Cargo.toml
CH4_headr/src/: lib.rs
CH4_headr_extended/: Cargo.toml
CH4_headr_extended/src/: lib.rs
CH4_headr_extended/tests/: cli.rs
CH5_wcr/: Cargo.toml
CH5_wcr/src/: lib.rs
CH5_wcr/tests/expected/: atlamal.txt.stdin.out
CH6_uniqr/src/: lib.rs
CH6_uniqr_extended/: Cargo.toml
CH6_uniqr_extended/src/: lib.rs
CH7_findr/src/: lib.rs
CH7_findr/tests/: cli.rs
CH7_findr_extended/: Cargo.toml
CH7_findr_extended/src/: lib.rs
CH8_cutr/: Cargo.toml
CH8_cutr/src/: lib.rs
CH8_cutr/tests/: cli.rs
CH9_grepr/: Cargo.toml
CH9_grepr/src/: lib.rs
CH9_grepr_extended/: Cargo.toml
CH9_grepr_extended/src/: lib.rs
CH9_grepr_extended/tests/: cli.rs
