[package]
name = "calr"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
itertools = "0.11.0"
ansi_term = "0.12"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
